tests/snapshots/integration__integration_tests__approvals__clear_approvals_global_no_approvals.snap
---
source: tests/integration_tests/approvals.rs
assertion_line: 22
info:
  program: wt
  args:
    - beta
    - clear-approvals
    - "--global"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
⚪ [2mNo approvals to clear[0m

----- stderr -----
